# google-dns-ips

./: README.md  pyproject.toml
examples/: flask_server.py  print_google_ips.py
src/google_dns_ips/: __init__.py  query.py  resolver.py
src/google_dns_ips.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
